2003-07-26  Per Bothner  <per@bothner.com>

	* SortedNodes.java:  New class, extends Values.
	* SortNodes.java:  New class, extends Procedure1.
	* Makefile.am (java_sources):  Update accordingly.

	* ElementConstructor.java (compileUsingNodeTree):  Use new
	ConsumerTarget.compileUsingConsumer helper method.

2003-07-23  Per Bothner  <per@bothner.com>

	* NodeCompare.java:  New class, extends Procedure2.
	* Makefile.am (java_sources):  Update accordingly.

2003-07-10  Per Bothner  <per@bothner.com>

	* ElementConstructor.java (compileUsingNodeTree):  New static method.
	(typeNodeTree):  New static field.
	(compile):  Use compileUsingNodeTree.

2003-06-27  Per Bothner  <per@bothner.com>

	* XMLParser.java (<init>):  Re-do to deal with NamespaceResolver
	being merged into ParsedXMLToConsumer.

	* NodeType.java (isObject(Object)):  New method.
	* ElementType.java (isInstancePos):  If kind is OBJECT_VALUE, try
	isInstance(Object).  Fixes bug 6/17 by reported vizawalou@wanadoo.fr.

2003-06-13  Per Bothner  <per@bothner.com>

	* AttributeConstructor.java (apply):  Use CallContext's getNextArg
	method rather than getArgAsObject, which will be deprecated.
	* DocumentConstructor.java (apply):  Likewise.
	* ElementConstructor.java (apply):  Likewise.
	* TextConstructor.java (apply):  Likewise.

2003-05-21  Per Bothner  <per@bothner.com>

	* NamedAttributes.java (namedAttributes):  Use posToDataIndex.
	Fixes bug reported 05-18 by Seshukumar_Adiraju@infosys.com.

2003-05-04  Per Bothner  <per@bothner.com>

	* ListItems.java:  Handle non-Java2 case.
	* IteratorItems.java:  Handle non-Java2 case.

2003-05-03  Per Bothner  <per@bothner.com>

	* Focus.java.in:  Renemed to ..
	* Focus.java:   and changed to use new JAVA1/JAVA2 switching.
	* Makefile.am:  Update accordingly.

2003-05-02  Per Bothner  <per@bothner.com>

	* XMLParser.java (<init>):  New constructors automatically
	allocate a NamespaceResolver.
	* Document.java (parse):  Use new XMLParser constructor.